--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title>how to learn html</title>
 	</head>
 	<body> <iframe width="560" height="315" src="https://www.youtube.com/embed/g69o0E9zljU?si=0YDV3ZOXJIx90Xvb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-	<h1>listen to class , you automatically understand</h1>
+	<h1>listen to class , you automatically understand rascal</h1>
 	<img width = "30%"src="download.jpeg">
 	<a href="me.html">nijam ga nerchukovali ani ikkada click cheyandi</a>
 	<a>about html</a>
